# csound-cxx-opcodes

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md  build-cxx-macos.sh  build-macos.sh  build.sh  clang_example.csd  clang_hello.csd  clang_invokable.hpp  clang_opcodes.cpp  clean-build.sh  cxx_example.csd  cxx_example_faust.csd  cxx_hello.csd  cxx_invokable.hpp  cxx_opcodes.cpp  hello.csd  oblivion.csd  platform_identifier.cpp  risset.json
.github/workflows/: cmake.yml
doc/: cxx_compile.md  cxx_invoke.md
doc/Embedding_Clang_LLVM_in_Csound/: EmbeddingClangLLVMinCsound.bib  EmbeddingClangLLVMinCsound.tex  Embedding_Clang_LLVM_in_Csound.tex  cmj.bst  cmjStyle.sty
examples/: cxx_example.csd  cxx_hello.csd
